[438764] allow compiling Xtend against a different JDK
Change-Id: I914d7f0b3f7e34cce026f4037736f492a2cca9ff